Bug 749316 - Put Debugger object into chrome scratchpad. r=dcamp,bholley.